first step to fix the collapse bug #39

--- a/src/frontend/src/app/components/chatbar/chatbar.component.css
+++ b/src/frontend/src/app/components/chatbar/chatbar.component.css
@@ -2,14 +2,17 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 340px;
+  height: 40px;
 
   background-color: #2c3649;
 }
 
+.chatbar-collapsed {
+  height: 340px;
+}
+
 .chatbar-header {
   padding-top: 10px;
-  padding-bottom: 10px;
   display: flex;
   justify-content: center;
   width: 100%;
