--- a/src/frontend/src/app/components/navbar/navbar.component.css
+++ b/src/frontend/src/app/components/navbar/navbar.component.css
@@ -1,6 +1,6 @@
 .sidenav {
   background-color: #2c3649;
-  /*transition: all 0.3s ease;*/
+  transition: 0.3s;
   position: fixed;
   z-index: 1;
   top: 0;
@@ -22,11 +22,8 @@
 }
 
 .sidenav .sidenav-header .logo {
-  background-color: transparent;
-  width: 64px;
-  height: 64px;
   border-radius: 6px;
-  cursor: pointer;
+  padding-left: 8px;
   border: none;
 }
 
@@ -79,7 +76,6 @@
   height: 3rem;
   color: white;
   border-radius: 0.625rem;
-  transition: all 0.3s ease;
 }
 
 .sidenav-nav-item .sidenav-nav-link .sidenav-link-avatar {
