--- a/src/frontend/src/app/pages/home/home.component.css
+++ b/src/frontend/src/app/pages/home/home.component.css
@@ -1,7 +1,8 @@
 .home-container {
   display: block;
   width: calc(100% - 80px);
-  height: calc(100% - 40px);
+  /* height: calc(100% - 40px); */
+  height: 100%;
   left: 80px;
   position: absolute;
   transition: 0.3s;
@@ -13,7 +14,7 @@
 }
 
 .home-container-chat-collapsed {
-  height: calc(100% - 340px);
+  height: calc(100% - 300px);
 }
 
 /* POP UP */
